<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--The following code is from: https://www.geeksforgeeks.org/android/bottom-navigation-bar-in-android/
        15 Jul, 2025
        agarwalkeshav8399-->
    <item
        android:id="@+id/nav_home"
        android:title="Home"
        android:icon="@drawable/home"/>

    <!--TO DO IMPLEMENT THE REST OF THE NAV BAR
    <item
        android:id="@+id/nav_summary"
        android:title="Summary"
        android:icon="@drawable/summary"/>
        -->
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="History" />

    <!-- Center (+) create -->
    <item
        android:id="@+id/nav_create_event"
        android:title="Create"
        android:icon="@drawable/create_event"/>

    <item
        android:id="@+id/nav_my_events"
        android:icon="@drawable/ic_eventscal"
        android:title="My Events" />

    <item
        android:id="@+id/nav_scan"
        android:icon="@drawable/ic_qrscan"
...
