...
        android:layout_marginTop="4dp"
        android:text="Nov 3, 2025 · Madison Square Garden"
        android:textColor="@color/hinty"
        android:textSize="13sp" />

    <Button
        android:id="@+id/eventButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:text="Join Waiting List"
        android:textColor="@color/black" />
...
