...

        <!-- Bell -->
        <FrameLayout
            android:id="@+id/notificationIconWrapper"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_toStartOf="@id/iconProfile"
            android:layout_marginEnd="4dp">

            <ImageView
                android:id="@+id/iconNotifications"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...
